syntax = "proto3";

package pb;

import "global.proto";


service RPC_Shared {
    rpc SharedEcho (SharedEchoParam) returns (SharedEchoResponse);
    rpc SharedCheckUserName (SharedCheckUserNameParam) returns (SharedCheckUserNameResponse);
}

message SharedEchoParam {
    string text = 1;
}

message SharedEchoResponse {
    bool done =1;
    string text = 2;
}


message SharedCheckUserNameParam {
    string username = 1;
}

message SharedCheckUserNameResponse {
    bool is_available =1;
    string username = 2;
    string show_message = 3;
}
